compiler/fir/analysis-tests/testData/resolve/diagnostics/primaryConstructorRequiredForDataClass.kt
data class A {}

data class <!PRIMARY_CONSTRUCTOR_REQUIRED_FOR_DATA_CLASS!>B<!> {
    constructor()
}

data class <!PRIMARY_CONSTRUCTOR_REQUIRED_FOR_DATA_CLASS!>C<!> {
    constructor(x: Int)
}